Prepopulated tiles may never be unparented from TileGrids with aggressive tile retention on https://bugs.webkit.org/show_bug.cgi?id=133471

Reviewed by Simon Fraser.

* platform/graphics/ca/mac/TileController.h:
* platform/graphics/ca/mac/TileGrid.h:
(WebCore::TileGrid::TileCohortInfo::TileCohortInfo):
* platform/graphics/ca/mac/TileGrid.mm:
(WebCore::TileGrid::TileCohortInfo::timeUntilExpiration):
(WebCore::TileGrid::cohortRemovalTimerFired):
Factor timeUntilExpiration() out of cohortRemovalTimerFired().

(WebCore::TileGrid::revalidateTiles):
Ensure that secondary tiles that never touch the primary coverage rect
are still unparented eventually (after 2 seconds, the same lifetime we use
for cohorts in non-aggressive retention).
Schedule another revalidateTiles if we left parented secondary tiles behind.


Canonical link: https://commits.webkit.org/151505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169565 268f45cc-cd09-0410-ab3c-d52691b4dbfc