Source/WebCore/platform/graphics/ca/mac/TileGrid.mm
@@ -314,6 +314,9 @@ void TileGrid::revalidateTiles(unsigned validationPolicy)
     TileCohort currCohort = nextTileCohort();
     unsigned tilesInCohort = 0;
 
+    double minimumRevalidationTimerDuration = std::numeric_limits<double>::max();
+    bool needsTileRevalidation = false;
+
     // Move tiles newly outside the coverage rect into the cohort map.
     for (TileMap::iterator it = m_tiles.begin(), end = m_tiles.end(); it != end; ++it) {
         TileInfo& tileInfo = it->value;
@@ -336,9 +339,27 @@ void TileGrid::revalidateTiles(unsigned validationPolicy)
 
                 if (m_controller.unparentsOffscreenTiles())
                     tileLayer->removeFromSuperlayer();
+            } else if (m_controller.unparentsOffscreenTiles() && m_controller.shouldAggressivelyRetainTiles() && tileLayer->superlayer()) {
+                // Aggressive tile retention means we'll never remove cohorts, but we need to make sure they're unparented.
+                // We can't immediately unparent cohorts comprised of secondary tiles that never touch the primary coverage rect,
+                // because that would defeat the usefulness of prepopulateRect(); instead, age prepopulated tiles out as if they were being removed.
+                for (auto& cohort : m_cohortList) {
+                    if (cohort.cohort != tileInfo.cohort)
+                        continue;
+                    double timeUntilCohortExpires = cohort.timeUntilExpiration();
+                    if (timeUntilCohortExpires > 0) {
+                        minimumRevalidationTimerDuration = std::min(minimumRevalidationTimerDuration, timeUntilCohortExpires);
+                        needsTileRevalidation = true;
+                    } else
+                        tileLayer->removeFromSuperlayer();
+                    break;
+                }
             }
         }
     }
+
+    if (needsTileRevalidation)
+        m_controller.scheduleTileRevalidation(minimumRevalidationTimerDuration);
 
     if (tilesInCohort)
         startedNewCohort(currCohort);
@@ -448,6 +469,13 @@ void TileGrid::scheduleCohortRemoval()
         m_cohortRemovalTimer.startRepeating(cohortRemovalTimerSeconds);
 }
 
+double TileGrid::TileCohortInfo::timeUntilExpiration()
+{
+    double cohortLifeTimeSeconds = 2;
+    double timeThreshold = monotonicallyIncreasingTime() - cohortLifeTimeSeconds;
+    return creationTime - timeThreshold;
+}
+
 void TileGrid::cohortRemovalTimerFired(Timer<TileGrid>*)
 {
     if (m_cohortList.isEmpty()) {
@@ -455,10 +483,7 @@ void TileGrid::cohortRemovalTimerFired(Timer<TileGrid>*)
         return;
     }
 
-    double cohortLifeTimeSeconds = 2;
-    double timeThreshold = monotonicallyIncreasingTime() - cohortLifeTimeSeconds;
-
-    while (!m_cohortList.isEmpty() && m_cohortList.first().creationTime < timeThreshold) {
+    while (!m_cohortList.isEmpty() && m_cohortList.first().timeUntilExpiration() < 0) {
         TileCohortInfo firstCohort = m_cohortList.takeFirst();
         removeTilesInCohort(firstCohort.cohort);
     }
